fixed body concatenation script

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                   <input type="checkbox" id="atRemoteTransfer" name="RemoteTransferOptions"><br>
                   <label style="color: #ff8000;" name="RemoteTransferOptions" for="atOldAccountAgreed">Previous Account Holder Consent?</label>
                   <input type="checkbox" id="atOldAccountAgreed" name="RemoteTransferOptions">
-                  <input name="RemoteTransferOptions" id="atOldAccount" type="text" class="mainInputBox" placeholder="Old Account Number">
+                  <input name="RemoteTransferOptions" id="atOldAccount" type="text" class="mainInputBox" placeholder="Old Account Number (if applicable)">
 
                   <select id="rentOwn" class="dropdown">
                       <option value="">-- Rent or Own? --</option>
