fixed address and account number fields on installation form

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
 
                   <input type="text" class="mainInputBox" placeholder="Who's Calling?" required id="atName">
-                  <input type="text" class="mainInputBox2" placeholder="Address" required id="AtAddress">
+                  <input type="text" class="mainInputBox2" placeholder="Address" required id="atAddress">
                   <input type="number" id="atCallId" placeholder="UJET Call ID (required)" name="callId" class="textboxInput" autocomplete="off" required>
 
 
