cleaned ticket body

--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
                                   <label for="installTimePM"> 1:00 PM -5:00 PM</label> <br><br>
 
                           </label>
+                          <input type="text" class="textboxInput" placeholder="Total Due:" id="atTotalDue" autocomplete="off">
                           Please click <a style="color: #99e6ff;" href="https://nxlink-my.sharepoint.com/personal/sferris_team_nxlink_com/_layouts/15/Doc.aspx?sourcedoc={8ff31993-122c-4a74-8bef-1b855d60e361}&action=view&wd=target%28ASAP%20Tips%21.one%7C9b8e90e1-d074-4635-a30e-74480b75fa8c%2F%29&wdorigin=717">Scheduling Guidelines</a> for more information. <br><br>
 
                           Expectations:
